k8s/kyverno-policies/latest_tag_pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: myapp-pod-good
  labels:
    app: myapp
spec:
  containers:
  - name: nginx
    image: nginx:1.12
