k8s/kyverno-policies/latest_tag_pod_failure.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: myapp-pod-bad
  labels:
    app: myapp
spec:
  containers:
  - name: nginx
    image: nginx:latest
